--- a/src/material/stepper/stepper.scss
+++ b/src/material/stepper/stepper.scss
@@ -1,6 +1,7 @@
 @use 'sass:math';
 @use '../core/style/variables';
 @use './stepper-variables';
+@use '../../cdk/a11y';
 
 .mat-stepper-vertical,
 .mat-stepper-horizontal {
@@ -125,11 +126,19 @@
 }
 
 .mat-horizontal-content-container {
+  @include a11y.high-contrast(active, off) {
+    outline: solid 1px;
+  }
+
   overflow: hidden;
   padding: 0 stepper-variables.$side-gap stepper-variables.$side-gap stepper-variables.$side-gap;
 }
 
 .mat-vertical-content-container {
+  @include a11y.high-contrast(active, off) {
+    outline: solid 1px;
+  }
+
   margin-left: stepper-variables.$vertical-stepper-content-margin;
   border: 0;
   position: relative;
